--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-reated by https://www.gitignore.io/api/java,macos,maven,windows,eclipse,intellij+all
+reated by https://www.gitignore.io/api/git,java,macos,maven,windows,eclipse,intellij+iml
 
 ### Eclipse ###
 
@@ -59,7 +59,10 @@ local.properties
 # JDT-specific (Eclipse Java Development Tools)		
 .classpath
 
-### Intellij+all ###
+### Git ###
+*.orig
+
+### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -113,11 +116,13 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-### Intellij+all Patch ###
-# Ignores the whole idea folder
-# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+### Intellij+iml Patch ###
+# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
-.idea/
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
 
 ### Java ###
 # Compiled class file
@@ -205,4 +210,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/java,macos,maven,windows,eclipse,intellij+all
+# End of https://www.gitignore.io/api/git,java,macos,maven,windows,eclipse,intellij+iml
